--- a/app/src/main/res/layout/fragment_foto_perfil.xml
+++ b/app/src/main/res/layout/fragment_foto_perfil.xml
@@ -16,6 +16,7 @@
             android:weightSum="2">
 
             <ImageView
+                android:id="@+id/ivFotoPerfil"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
