--- a/app/src/main/res/layout/agencialist_item.xml
+++ b/app/src/main/res/layout/agencialist_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:orientation="horizontal"
+    android:baselineAligned="false"
     android:padding="@dimen/activity_horizontal_margin">
 
     <LinearLayout
