--- a/app/src/main/res/layout/albumlist_item.xml
+++ b/app/src/main/res/layout/albumlist_item.xml
@@ -1,33 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
+    android:layout_marginStart="10dp"
     android:orientation="horizontal"
-    android:columnCount="3">
+    android:weightSum="3">
 
 
-    <Button
+    <ImageButton
         android:id="@+id/tbalbum"
-
-        android:text="Ver" />
+        style="@android:style/Widget.Material.Light.ImageButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@null"
+        android:backgroundTint="@null"
+        android:src="@drawable/ic_remove_red_eye_black_24dp"
+        app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />
 
     <ImageButton
         android:id="@+id/tbalbumcomparte"
-
         style="@android:style/Widget.Material.Light.ImageButton"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@null"
+        android:backgroundTint="@null"
+        android:src="@drawable/ic_menu_share"
         app:srcCompat="@drawable/ic_menu_share" />
 
     <TextView
         android:id="@+id/nombre"
 
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:paddingBottom="2dip"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
 
 
-
-</GridLayout>
+</LinearLayout>
